--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet" type="text/css"/>
+    <link href="styles.css" rel="stylesheet" type="text/css"/> 
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https: //fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" >
     <title>Document</title>
 </head>
 <body>
     <p id="parrafo" class="fuente">Holis</p>
     <section class="cuadrito"> 
     <p class="fuente">contenido</p>
+    </section>
+    <section class="cuadrito2">
+        <p class="fuente">contenido</p>
     </section>
 </body>
 </html>
